Fix overflow handling and scrollbar visibility in board component styles

--- a/src/app/features/board/page/board-page/board-page.component.scss
+++ b/src/app/features/board/page/board-page/board-page.component.scss
@@ -1,5 +1,4 @@
 .board {
-  overflow-y: auto;
   width: 100%;
 
   &__header {
@@ -78,6 +77,15 @@
     border: dashed 3px transparent;
     transition: border-color 0.2s ease;
     padding-bottom: 24px;
+    padding: 5px;
+    overflow-y: auto;
+    max-height: calc(100vh - 370px);
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     &--active {
       border-color: var(--gray);
